// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating a group talent 1`] = `
<FieldBorder
  style={
    Object {
      "marginBottom": "1.5rem",
    }
  }
>
  <FormRow>
    <Field
      component={[Function]}
      label="Talent Type"
      name="talentType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Individual",
            "value": "Individual",
          },
          Object {
            "label": "Group",
            "value": "Group",
          },
        ]
      }
      required={true}
      searchable={false}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      disabled={true}
      forceSingleLine={true}
      label="First Names"
      maxLength={20}
      name="firstNames"
    />
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Last Name / Group Name"
      maxLength={30}
      name="lastName"
      required={true}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Common Role"
      maxLength={40}
      name="commonRole"
      required={true}
    />
  </FormRow>
  <SubFormButtons
    onReset={[Function]}
    onSubmit={[Function]}
    pristine={true}
    submitting={false}
  />
</FieldBorder>
`;

exports[`should render correctly when creating an individual talent 1`] = `
<FieldBorder
  style={
    Object {
      "marginBottom": "1.5rem",
    }
  }
>
  <FormRow>
    <Field
      component={[Function]}
      label="Talent Type"
      name="talentType"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Individual",
            "value": "Individual",
          },
          Object {
            "label": "Group",
            "value": "Group",
          },
        ]
      }
      required={true}
      searchable={false}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      disabled={false}
      forceSingleLine={true}
      label="First Names"
      maxLength={20}
      name="firstNames"
    />
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Last Name / Group Name"
      maxLength={30}
      name="lastName"
      required={true}
    />
  </FormRow>
  <FormRow>
    <Field
      component={[Function]}
      forceSingleLine={true}
      label="Common Role"
      maxLength={40}
      name="commonRole"
      required={true}
    />
  </FormRow>
  <SubFormButtons
    onReset={[Function]}
    onSubmit={[Function]}
    pristine={true}
    submitting={false}
  />
</FieldBorder>
`;
